--- a/website8/about.html
+++ b/website8/about.html
@@ -10,10 +10,10 @@
 
 <body>
     <header style="display: flex; align-items: center;">
-        <a href="https://www.lauras-nareiko.com/">
+        <a href="index.html">
             <img src="lauras_nareiko_logotype.png" alt="Lauras' logotype" style="margin-right: 10px; width: 100px; height: auto;">
         </a>
-        <h1><a href="https://www.lauras-nareiko.com/" class="h1-hyperlink">Ideas <span style="font-size: smaller;">&</span> Ideals</a></h1>
+        <h1><a href="index.html" class="h1-hyperlink">Ideas <span style="font-size: smaller;">&</span> Ideals</a></h1>
     </header>
     <hr class="grey-horizontal-line">
     <nav class="menu">
