--- a/website8/about.html
+++ b/website8/about.html
@@ -36,15 +36,12 @@
 
 <section>
     <h2>Lauras Nareiko</h2>
-    <div class="big-small">
-        <div class="big60">
-            <img src="lauras_nareiko.png" alt="Lauras Nareiko">
+    <div>
+        <div class="fade-scale-in">
+            <img src="lauras_nareiko.png" alt="Lauras Nareiko" class="wrapped">
         </div>
-        <div class="small35">
-            <p class="first-par" style="color: rgb(207, 71, 119); font-size: 2em; text-align: center; line-height: normal;">May the other side also be heard.
-                <br><span style="font-size: small; font-style: italic; color: black;">(Latin expression)</span>
-            </p>
-        </div>
+        <p class="first-par" style="color: rgb(207, 71, 119); font-size: 1.3em; text-align: center; line-height: normal; margin-bottom: 0%;">May the other side also be heard.</p>
+        <p class="first-par" style="font-size: small; text-align: right; font-style: italic; color: black; margin-top: 0%;">(Latin expression)</p>
     </div>
 </section>
 
@@ -58,18 +55,14 @@
 <section>
     <h3>Key facts:</h3>
     <p class="first-par">Background in Foresight, Intuition and Business:</p>
-    <div class="big-small">
-        <div class="big60">
-            <ul>
-                <li>A PhD candidate and a Master of Arts in <span class="highlight-bold">Futures Studies</span>, University of Turku, Finland - one of the countries known for their advanced foresight capacity.</li>
-                <li>Participant of a one-year seminar <span class="highlight-bold">Holistic Guidance Body-Mind-Spirit</span> led by Sabine Hahne.</li>
-                <li>Master of Humanities from the Belarusian State University, where I studied <span class="highlight-bold">International Economics, Law, languages</span> and a number of cross-disciplinary courses. Competent in Communications, Maths, ICT.</li>
-            </ul>
-        </div>
-        <div class="small35">
-            <img src="lauras_nareiko_lake.png" alt="Lauras near the lake">
-        </div>
+    <div class="fade-scale-in">
+        <img src="lauras_nareiko_lake.png" alt="Lauras near the lake" class="wrapped" style="float: right;">
     </div>
+    <ul>
+        <li>A PhD candidate and a Master of Arts in <span class="highlight-bold">Futures Studies</span>, University of Turku, Finland - one of the countries known for their advanced foresight capacity.</li>
+        <li>Participant of a one-year seminar <span class="highlight-bold">Holistic Guidance Body-Mind-Spirit</span> led by Sabine Hahne.</li>
+        <li>Master of Humanities from the Belarusian State University, where I studied <span class="highlight-bold">International Economics, Law, languages</span> and a number of cross-disciplinary courses. Competent in Communications, Maths, ICT.</li>
+    </ul>
     <p class="first-par">Entrepreneur since 2006, providing <span class="highlight-bold">communications</span> and <span class="highlight-bold">foresight</span> services. Served over 900 corporate customers of varying sizes, coming from different industries and ends of the world.</p>
     <p class="first-par">Languages and cultures: Fluent in <span class="highlight-italic">English, French, Russian, Swedish, Belarusian</span>. Less fluent in <span class="highlight-italic">Norwegian, Finnish, German, Latvian, Polish, Ukrainian</span>. I lived in Belarus, Nordics, Baltics, Germany, and USA.</p>
 </section>
@@ -115,6 +108,17 @@
 </section>
 
 <h5>Some scientists say we fear the new.<br>Let's prove them wrong :)</h5>
+
+<div class="empty-space"></div>
+
+<p class="first-par">Have a question? You can write me here:</p>
+<form action="/submit-form" method="post" class="contact-form"> 
+    <label for="email">Email:</label> 
+        <input type="email" id="email" name="email" required> 
+    <label for="message">Message:</label> 
+        <textarea id="message" name="message" rows="4" required></textarea> 
+    <button type="submit">Submit</button> 
+</form>
 
 </main>
 
