--- a/website8/foresight.html
+++ b/website8/foresight.html
@@ -66,6 +66,15 @@
     <img src="methods.png" alt="Methods of futures research" class="non-wrapped-image">
     <p>One method is seldom enough. Usually, a combination of three or more methods is needed, particularly because the results obtained with one method need to be complemented or tested by other methods.</p>
     <p>Knowledge about possible, plausible and preferable futures helps take better decisions now. But is there any reliable way to know the future? The answer is yes and no. Knowledge about futures can be as reliable or unreliable as knowledge in any other field or about any other subject. Quality of knowledge depends both on the tools and on the hands that hold the tools. For great results, science and art shall go together.</p>
+    <p>As an example of how foresight can help in extremely high uncertainty, here are a few slides from my presentation about far-far futures (sometimes called grand futures).</p>
+    <div class="slideshow">
+        <div class="slides fade"> <img src="slides/demo1.PNG" alt="Probable new human needs" style="width:100%"> </div>
+        <div class="slides fade"> <img src="slides/demo12.PNG" alt="Ideas of significant changes" style="width:100%"> </div>
+        <div class="slides fade"> <img src="slides/demo16.PNG" alt="Possible transformative changes" style="width:100%"> </div>
+        <div class="slides fade"> <img src="slides/demo22.PNG" alt="One case is special" style="width:100%"> </div>
+        <div class="slides fade"> <img src="slides/demo25.PNG" alt="Self-limitation is the new need" style="width:100%"> </div>
+    </div>
+    <div class="empty-space"></div>
 </section>
 
 <section>
