--- a/website8/index.html
+++ b/website8/index.html
@@ -76,10 +76,11 @@
     <p class="first-par">The tree above represents what I did in the past, you can also check examples of my thinking in my blog. Business design, service design, and collaborative networks design were the most frequent categories.</p>
     <p>By June 2023, I have helped over seventy relevant customers. Their size varied a lot (some were global leaders), as well as their industries. The nature of the problems has been changing in line with the dominant trends: e.g. globalization, digitization, sustainability, self-sufficiency, artificial intelligence...</p>
     <p>'Comprehensive', 'holistic', 'creative', 'futuristic' - these words my customers use when they give feedback about my ideas.</p>
-    <div class="empty-space"></div>
-    <p class="highlight-italic">In 2018, the <a class="p-hyperlink" href="https://globalchallenges.org/" target="_blank">Global Challenges Foundation</a> announced a contest with USD 5M in awards, of which the absolute winner would have received at least USD 1 M. The task was to suggest a global governance system that would meet a number of criteria, e.g. equality of people, being realistic for the coming decade etc.</p>
-    <p class="highlight-italic">A tough challenge and good money, also for scientific, expert organizations and consultancies. I decided to participate. Over 12.000 others also decided so and registered for the contest. Yet only about 2.700 of them submitted their entries. (Here is <a class="p-hyperlink" href="https://4b2f524b-bb05-45ea-85cc-584e5d9dbe47.filesusr.com/ugd/9a6408_ba8166faac714590865b40917a579728.pdf" target="_blank">mine</a>, just in case.)</p>
-    <p class="highlight-italic">I did not win, but I was in that top quarter who delivered.</p>
+    <div class="framed">
+        <p class="highlight-italic" style="text-indent: 0px;">In 2018, the <a class="p-hyperlink" href="https://globalchallenges.org/" target="_blank">Global Challenges Foundation</a> announced a contest with USD 5M in awards, of which the absolute winner would have received at least USD 1 M. The task was to suggest a global governance system that would meet a number of criteria, e.g. equality of people, being realistic for the coming decade etc.</p>
+        <p class="highlight-italic">A tough challenge and good money, also for scientific, expert organizations and consultancies. I decided to participate. Over 12.000 others also decided so and registered for the contest. Yet only about 2.700 of them submitted their entries. (Here is <a class="p-hyperlink" href="https://4b2f524b-bb05-45ea-85cc-584e5d9dbe47.filesusr.com/ugd/9a6408_ba8166faac714590865b40917a579728.pdf" target="_blank">mine</a>, just in case.)</p>
+        <p class="highlight-italic">I did not win, but I was in that top quarter who delivered.</p>
+    </div>
 </section>
 
 <section>
@@ -149,5 +150,6 @@
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
