--- a/website8/visioning.html
+++ b/website8/visioning.html
@@ -72,33 +72,29 @@
 
 <section>
     <h3>Visioning with Lauras Nareiko is like being with the light</h3>
-    <div class="big-small">
-        <div class="big60">
-            <p class="first-par">I am a professional futurist specializing in visioning and conceptual design. I have co-created visions with many wonderful organizations, including companies from the Fortune 500 list. Some visions are being realized, but most have played an informative or corrective role, decreasing risks and costs.</p>
-            <p style="padding-bottom: 2em;">I consider my contribution to the national discourse about freedom in Belarus (population over 9M) in 2020 to be my biggest achievement in visioning so far. It took me just about two weeks (and zero money) to change the dominating idea in the society about how to liberate themselves.</p>
-        </div>
-        <div class="small35" style="align-items: flex-start; margin-top: 1.2em;">
-            <div class="image-and-source">
-                <img src="stars.png" alt="Person watching bright stars from the winter forest" class="image-fit-to-page">
-                <p class="source">Image by Yann Allegre. Unsplash</p>
-            </div>
-        </div>
-    </div>
-    <div>
-        <p class="first-par">Why you can benefit:</p>
+    <p class="first-par">I am a professional futurist specializing in visioning and conceptual design. I have co-created visions with many wonderful organizations, including companies from the Fortune 500 list. Some visions are being realized, but most have played an informative or corrective role, decreasing risks and costs.</p>
+    <p style="padding-bottom: 2em;">I consider my contribution to the national discourse about freedom in Belarus (population over 9M) in 2020 to be my biggest achievement in visioning so far. It took me just about two weeks (and zero money) to change the dominating idea in the society about how to liberate themselves.</p>
+    <div class="clear"></div>
+</section>
+
+<section>
+    <h3>Why you can benefit</h3>
         <ul class="rose-list">
             <li>Creativity will set you free.</li>
         </ul>
-        <p class="first-par" style="padding-bottom: 2em;">The more ideas you have, the better chances you'll find an optimal one. I dare exploring all ideas systematically, including radical, 'underground', 'unethical' or otherwise unexpected ones. (The ethical aspects are examined in later stages.)</p>
+        <div class="wrapped" style="float: right; margin: 5px 0 0 30px;">
+            <img src="stars.png" alt="Person watching bright stars from the winter forest" class="image-fit-to-page">
+            <p class="source">Image by Yann Allegre. Unsplash</p>
+        </div>
+        <p style="padding-bottom: 2em;">The more ideas you have, the better chances you'll find an optimal one. I dare exploring all ideas systematically, including radical, 'underground', 'unethical' or otherwise unexpected ones. (The ethical aspects are examined in later stages.)</p>
         <ul class="rose-list">
             <li>Simplicity will help you near genius.</li>
         </ul>
-        <p class="first-par" style="padding-bottom: 2em;">Simplicity is not so simple, especially about new things. But don't worry, I have quite a few skills to reach it: abstract thinking, logical thinking, systems thinking, qualitative analysis, linguistic expertise.</p>
+        <p style="padding-bottom: 2em;">Simplicity is not so simple, especially about new things. But don't worry, I have quite a few skills to reach it: abstract thinking, logical thinking, systems thinking, qualitative analysis, linguistic expertise.</p>
         <ul class="rose-list">
             <li>Beauty will empower you.</li>
         </ul>
-        <p class="first-par" style="padding-bottom: 2em;">Visions become legitimate when they get loved. I cannot guarantee immediate love, but 1) you can definitely expect some strong reactions to our co-created vision in the beginning, and 2) as time goes on, the well-thought vision about the future will defend itself.</p>
-    </div>
+        <p style="padding-bottom: 2em;">Visions become legitimate when they get loved. I cannot guarantee immediate love, but 1) you can definitely expect some strong reactions to our co-created vision in the beginning, and 2) as time goes on, the well-thought vision about the future will defend itself.</p>
 </section>
 
 </main>
